--- a/Management/templates/add_items.html
+++ b/Management/templates/add_items.html
@@ -1,7 +1,8 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
-<head>
-	<title>{{title}}</title>
+<head> <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">>
+		<title>{{title}}</title>
 </head>
 <body>
 	<form method='POST' action=''>{% csrf_token %}
