--- a/Management/templates/list_items.html
+++ b/Management/templates/list_items.html
@@ -1,7 +1,7 @@
-queryset
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
-    <head>
+    <head> <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">>
         <title>{{title}}</title>
     </head>     
 
