--- a/Management/templates/add_items.html
+++ b/Management/templates/add_items.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 
 <html lang="en">
@@ -13,8 +14,8 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/navbar-fixed/">
 
     <!-- Bootstrap core CSS -->
-<link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">>
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">>
+<link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -32,8 +33,9 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="navbar-top-fixed.css" rel="stylesheet">
-  </head>
+	<link href="{% static 'css/navbar-top-fixed.css' %}" rel="stylesheet">
+
+</head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <a class="navbar-brand" href="#">Fixed navbar</a>
@@ -63,7 +65,7 @@
   <div class="jumbotron">
     <h1>{{title}}</h1>
     <form method='POST' action=''>{% csrf_token %}
-		{{form}}
+		{{form|crispy}}
         <input type="submit" value='Save'/>
     </form>
 </main>
