--- a/Management/templates/list_items.html
+++ b/Management/templates/list_items.html
@@ -13,8 +13,8 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/navbar-fixed/">
 
     <!-- Bootstrap core CSS -->
-<link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">>
-<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">>
+<link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <style>
       .bd-placeholder-img {
         font-size: 1.125rem;
@@ -32,7 +32,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="navbar-top-fixed.css" rel="stylesheet">
+    <link href="{% static 'css/navbar-top-fixed.css' %}" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
