--- a/Management/templates/list_items.html
+++ b/Management/templates/list_items.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% include 'navbar.html' %} 
 <!DOCTYPE html>
 
 <html lang="en">
@@ -35,38 +36,34 @@
     <link href="{% static 'css/navbar-top-fixed.css' %}" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Fixed navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-      </li>
-    </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-
 <main role="main" class="container">
   <div class="jumbotron">
-    <h1>{{title}}</h1>
-    {% for data in queryset %}
-    {{data.room_number}}, {{data.amount_paid}}, {{data.occupant_name}}, {{data.occupant_email}}, {{data.occupant_occupation}}, {{data.number_of_night}}, {{data.start_date}}, {{data.end_date}}<br>
-    {% endfor %}
-</div>
+    <div class="header">{{header}}</div>
+    <div class="display_table">
+      <table class='table'>
+        <thead>
+          <tr>
+            <th>Count</th>
+            <th>Client Name</th>
+            <th>Client Occupation</th>
+            <th>Room Number</th>
+          </tr>
+        </thead>
+      {% for data in queryset %}
+          <tr>
+            <td>{{forloop.counter}}</td>
+            <td>{{data.occupant_name}}</td>
+            <td>{{data.occupant_occupation}}</td>
+            <td>{{data.room_number}}</td>
+          </tr>
+      {% endfor %}
+    </table>
+  </div>
 </main>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script></body>
 </html>
+
+<!--{% for data in queryset %}
+    {{data.room_number}}, {{data.amount_paid}}, {{data.occupant_name}}, {{data.occupant_email}}, {{data.occupant_occupation}}, {{data.number_of_night}}, {{data.start_date}}, {{data.end_date}}<br>
+    {% endfor %}-->
